default/objects/BIG__c/BIG__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>BIG</label>
</CustomObject>