default/objects/BIG__c/fields/Test_Data_Marker__c.field-meta.xml
<CustomField>
    <fullName>Test_Data_Marker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Data Marker</label>
    <type>Checkbox</type>
</CustomField>