default/objects/BIG__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>